force-app/main/default/objects/nPortal__Route_Tile__c/nPortal__Route_Tile__c.object-meta.xml
<CustomObject>
    <description>--DEPRECATED-- Junction object used to map tiles and routes.</description>
    <label>-D Route Tile</label>
    <nameField>
        <displayFormat>RT{0000}</displayFormat>
        <label>Tile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>-D Route Tiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>