force-app/main/default/objects/nPortal__Route_Tile__c/fields/nPortal__Order__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Order__c</fullName>
    <description>Prioritize the order of the tile on a route.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>