force-app/main/default/objects/nPortal__Route_Tile__c/fields/nPortal__Route__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a Route</description>
    <label>Route</label>
    <referenceTo>nFORCE__Route__c</referenceTo>
    <relationshipLabel>Route Tiles</relationshipLabel>
    <relationshipName>Route_Tiles</relationshipName>
    <type>Lookup</type>
</CustomField>