force-app/main/default/objects/nPortal__Route_Tile__c/fields/nPortal__Tile__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Tile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a Tile</description>
    <label>Tile</label>
    <referenceTo>nPortal__Tile__c</referenceTo>
    <relationshipLabel>Route Tiles</relationshipLabel>
    <relationshipName>Route_Tiles</relationshipName>
    <type>Lookup</type>
</CustomField>